chore: add timesToRead and category section for each posts

--- a/content/posts/sicpjs-0.mdx
+++ b/content/posts/sicpjs-0.mdx
@@ -1,7 +1,9 @@
 ---
 title: 자바스크립트로 배우는 SICP - 0. 흥미로워 보인다
 description: 기대된다. 책너두 챌린지 시작!
-date: "2023-10-23"
+createdAt: "2023-10-23"
+category: 독서
+timesToRead: 3
 ---
 ## 개요
 
