chore: fill untitled images, add mind23 conf content

--- a/content/posts/notion-blog-2.mdx
+++ b/content/posts/notion-blog-2.mdx
@@ -10,7 +10,7 @@ timesToRead: 10
 
 우선 새롭게 `NextJS` 를 이용하는 만큼 전부 새로운 것들을 경험해보자는 의미에서 기존에 즐겨쓰던 `yarn` 의 버전도 `berry` 로 올렸다. 그 이유는 그 유명한 블랙홀보다 깊은 `node_modules` 짤에서 시작됐다..😱 여기까지의 과정을 소개해보겠다…ㅎㅎ
 
-![Untitled](NextJS%E1%84%8B%E1%85%AA%20Notion%20API%E1%84%85%E1%85%B3%E1%86%AF%20%E1%84%92%E1%85%AA%E1%86%AF%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A1%E1%84%8B%E1%85%A7%20%E1%84%87%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%20%E1%84%8C%E1%85%A6%E1%84%8C%E1%85%A1%E1%86%A8%E1%84%92%E1%85%A1%E1%84%80%20a517fbc29f754b7d895f19ebf9382e89/Untitled.png)
+![node_moudles = 블랙홀](https://utfs.io/f/ea8f6b04-381f-4f88-a74c-a26951511a5e-eymbs3.jpg)
 
 이전 프로젝트 초기 세팅할때는 아무 생각 없이 단순하게 `node_modules` 를 사용해왔었다. 그런데 궁금증에 한번 해당 디렉토리를 하나하나 눌러서 들어가보았다. 결과는 뭐 알다시피 위 사진 형태였다. ~~Blackhole 보다 깊은..~~
 
@@ -27,7 +27,7 @@ timesToRead: 10
 > NPM 및 Yarn v1에서는 중복해서 설치되는 node_modules를 아끼기 위해 **끌어올리기(Hoisting) 기법**을 사용합니다.
 >
 
-![Untitled](NextJS%E1%84%8B%E1%85%AA%20Notion%20API%E1%84%85%E1%85%B3%E1%86%AF%20%E1%84%92%E1%85%AA%E1%86%AF%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A1%E1%84%8B%E1%85%A7%20%E1%84%87%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%20%E1%84%8C%E1%85%A6%E1%84%8C%E1%85%A1%E1%86%A8%E1%84%92%E1%85%A1%E1%84%80%20a517fbc29f754b7d895f19ebf9382e89/Untitled%201.png)
+![유령 의존성 그림](https://utfs.io/f/a83bf767-910e-49be-8251-b34df2536524-eymbs4.jpg)
 
 즉, npm이나 yarn을 사용하여 패키지를 설치하는 경우에 설치되는 패키지가 중복되는 것을(왼쪽 그림) 막기 위해 호이스팅 기법을 이용하여 오른쪽과 같이 중복되는 버전들을 디스크 공간의 낭비를 줄이도록 트리구조를 바꾸어 설치하게 된다는 것이다.
 
@@ -52,7 +52,6 @@ timesToRead: 10
 그럼 yarn v1(`npm i yarn` 을 통해 설치한 패키지 관리자이다. 내가 사용하려는 yarn berry와는 다르다. 앞서 설명했듯 `node_modules` 을 활용하는 yarn이라고 보면 된다)은 어떤 방식으로 작동할까?
 
 > Yarn v1은 **package.json 파일을 기반으로 의존성 트리를 생성**하고, **디스크에 node_modules 디렉토리 구조를 만듭니다**. 이미 패키지의 의존성 구조를 완전히 알고 있는 것입니다.
->
 
 그렇지만 앞서 나왔듯 Node의 내장 파일 시스템을 이용한 의존성 관리는 비효율적이다.
 
@@ -103,7 +102,7 @@ yarn set version berry
 
 우선 기존의 `node_modules` 를 이용하지 않는다. 대신 아래와 같이 .yarn/cache 디렉토리 내에 의존성 정보를 zip 파일로 저장된다. 여기까지만 보면, `node_modules` 과는 크게 다른 점이 없어 보인다.
 
-![스크린샷 2023-02-19 오후 6.33.20.png](NextJS%E1%84%8B%E1%85%AA%20Notion%20API%E1%84%85%E1%85%B3%E1%86%AF%20%E1%84%92%E1%85%AA%E1%86%AF%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A1%E1%84%8B%E1%85%A7%20%E1%84%87%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%20%E1%84%8C%E1%85%A6%E1%84%8C%E1%85%A1%E1%86%A8%E1%84%92%E1%85%A1%E1%84%80%20a517fbc29f754b7d895f19ebf9382e89/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2023-02-19_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%2592%25E1%2585%25AE_6.33.20.png)
+![파일 트리](https://utfs.io/f/1a3d900c-fb4b-49e6-9771-94609ca0fbcd-eymbs5.jpg)
 
 Yarn berry의 특별한 점은 의존성 관리를 위한 정보가 기록되는 `.pnp.cjs` 파일이다. 현재 나는 creat-next-app을 typescript template으로 이용하고 있다. 해당 파일 내에 들어있는 react 패키지를 찾아보자.
 
@@ -163,4 +162,8 @@ Yarn berry의 특별한 점은 의존성 관리를 위한 정보가 기록되는
 
 이렇게 yarn berry를 적용하게 된 과정을 전반적으로 알아보았다. 해당 기술의 의의를 탐구해볼 수 있던 중요한 경험이었다. 물론 아직 더욱 집중탐구를 해봐야 할 부분들이 많이 남았기에 지식 부족으로 글의 퀄리티는 많이 부족하다고 느껴진다. 그래도 이런 식으로 정리하고 기록하는 것이 기억에 잘 남는 것 같다. 어쩌면 개발일기 같기도 하다..😂😂
 
-하여튼 이렇게 yarn berry를 적용하고 간단하게 내부를 들춰보았다. 다음 포스트는 yarn berry와 함께하는 NextJS + Emotion의 환경 세팅에 관한 글을 올려볼까 한다.
+하여튼 이렇게 yarn berry를 적용하고 간단하게 내부를 들춰보았다. 다음 포스트는 Emotion에 관한 글을 올려볼까 한다.
+
+### 출처
+- https://toss.tech/article/node-modules-and-yarn-berry
+- https://yarnpkg.com/advanced/pnpapi
