--- a/content/posts/notion-blog-5.mdx
+++ b/content/posts/notion-blog-5.mdx
@@ -307,7 +307,7 @@ export default async function postIdHandler(
 
 다시 생각해보면 당연하다. 결국 요청을 한 번 하게 되면,
 
-- “우리 크롬이 → 노션 디비로 요청 → 노션 디비 → 다시 우리 크롬이“
+- “크롬이 → 노션 디비로 요청 → 노션 디비 → 다시 크롬“
 
 위와 같은 과정이 이뤄지는데 중간에 노션 디비 요청에서 노션 디비를, 이를 다시 크롬이 가져오는 것 자체가 너무나도 오래 걸리게 된다.
 
