--- a/content/posts/notion-blog-6.mdx
+++ b/content/posts/notion-blog-6.mdx
@@ -21,7 +21,7 @@ timesToRead: 5
 
 `notion api` 응답 시간 : 11.73s
 
-notion to md 라이브러리의 notion 컨텐츠를 markdown으로 변환하는데 대부분의 시간이 걸렸던 것이다. 즉, SSR도 React Query도, Notion database도 그 어떤 것들도 잘못이 없었다. 애꿏은 노션 디비만 욕 엄청 한 느낌…? 게다가 코드적인 문제도 꽤 있었다.
+notion to md 라이브러리의 notion 컨텐츠를 markdown으로 변환하는데 대부분의 시간이 걸렸던 것이다. 즉, SSR도 React Query도, Notion database도 그 어떤 것들도 잘못이 없었다. 애꿏은 노션 디비만 욕 엄청 한 느낌…? 게다가 코드적인 문제도 꽤 있었다. 노션행님 의심해서 미안요..🙏
 
 ### 그래서?
 
