--- a/content/posts/notion-blog-4.mdx
+++ b/content/posts/notion-blog-4.mdx
@@ -5,8 +5,7 @@ createdAt: "2023-02-25"
 category: 프로젝트
 timesToRead: 6
 ---
-개발하다가 상세 라우트에서 매번 노션 페이지를 페칭하는데 시간이 너무 오래 걸린다. 캐싱해두는 방법을 없을까 고민하다가, 여기서 React Query를 알아버렸다..!
-적용해본 결과는 다음과 같다!
+개발하다가 상세 라우트에서 매번 노션 페이지를 페칭하는데 시간이 너무 오래 걸리는게 생각보다 거슬렸다. 캐싱해두는 방법을 없을까 고민하고 찾아보다가 React Query를 알아버렸다..! 아래는 React Query 적용에 대한 간단한 기록들이다!
 ## React Query 적용 전
 
 리액트 쿼리를 적용하기 전에는 매번 라우트의 id 값을 `useMemo` 로 기록해두고 이를 `useEffect` 의 의존성 배열에 등록해두어 id가 바뀔 때마다 페칭하도록 코드를 작성했다!
