chore: fix sicpjs-18 description

--- a/content/posts/sicpjs-18.mdx
+++ b/content/posts/sicpjs-18.mdx
@@ -1,6 +1,6 @@
 ---
 title: 자바스크립트로 배우는 SICP - 18. 함수와 바인딩
-description: 배정을 하면 상태가 필요하지요 ~ 배정과 상태 변수에 대해서 알아보자!
+description: 배정은 함수를 평가하는 방식이 다르다고..?
 createdAt: "2023-11-11"
 category: 독서
 timesToRead: 6
