content: add sicpjs-21

--- a/content/posts/sicpjs-15.mdx
+++ b/content/posts/sicpjs-15.mdx
@@ -12,7 +12,7 @@ timesToRead: 7
 
 각 패키지는 인수의 형태에 따라 각기 다른 사칙연산 전략을 취했었다. 이를 추상화 장벽으로 나타낸 그림은 다음과 같다.
 
-![Untitled](%5B%E1%84%8C%E1%85%A1%E1%84%87%E1%85%A1%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%B8%E1%84%90%E1%85%B3%E1%84%85%E1%85%A9%20%E1%84%87%E1%85%A2%E1%84%8B%E1%85%AE%E1%84%82%E1%85%B3%E1%86%AB%20SICP%5D%2015%20%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%89%E1%85%A1%E1%86%AB%E1%84%83%E1%85%B3%E1%86%AF%E1%84%8B%E1%85%B4%20%E1%84%8E%E1%85%AE%E1%84%89%E1%85%A1%20070e873d7cd843ab8c138476f6bc2003/Untitled.png)
+![복소수의 추상화 장벽들](https://sicp.sourceacademy.org/img_javascript/ch2-Z-G-64.svg)
 
 위 그림에서 보여주는 추상화 방법은, 각기 다른 태그를 지닌 사칙연산들에서 한단계 더 추상화된 주어진 인수에 따라 작동하는 사칙연산 즉, 일반적인 사칙연산 함수를 구현할 수 있다는 점이다.
 
